# uptane-core

./: Cargo.toml  README.md
src/: fetcher.rs  lib.rs  metadata.rs
tests/: integration_test.rs
