[package]
name = "uptane-core"
version = "0.1.0"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
edition = "2018"
keywords = [ "signing"]
categories = [ "no-std"]


[dependencies]
#ed25519 = "1.0.1"

[dependencies.signatory]
git = "https://github.com/tstellanova/signatory"
default-features=false
features=["encoding","getrandom","p256"]


